# p_goit

python_web/modul_10_web/hw10notes/: pyproject.toml
python_web/modul_10_web/hw10notes/hw10Notes/: manage.py
python_web/modul_10_web/hw10notes/hw10Notes/hw10Notes/: asgi.py  settings.py  urls.py  wsgi.py
python_web/modul_10_web/hw10notes/hw10Notes/quotes/: urls.py  utils.py  views.py
python_web/modul_10_web/hw10notes/hw10Notes/quotes/static/quotes/: style.css
python_web/modul_10_web/hw10notes/hw10Notes/quotes/templates/quotes/: base.html  index.html
python_web/modul_10_web/hw10notes/hw10Notes/quotes/templatetags/: extract.py
python_web/modul_10_web/hw10notes/hw10Notes/utils/: add_quotes_to_mongo.py
python_web/modul_10_web/hw_10/: pyproject.toml
python_web/modul_10_web/hw_10/quotes/quotes/: settings.py  urls.py
python_web/modul_10_web/hw_10/quotes/users/: forms.py  models.py  urls.py  views.py
python_web/modul_10_web/hw_10/quotes/users/migrations/: 0001_initial.py
python_web/modul_10_web/second/: pyproject.toml
python_web/modul_10_web/second/notes/noteapp/: admin.py  forms.py  models.py  urls.py  views.py
python_web/modul_10_web/second/notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
python_web/modul_10_web/second/notes/noteapp/templatetags/: extract_tags.py
python_web/modul_10_web/second/notes/notes/: settings.py  urls.py
python_web/modul_10_web/second/notes/users/: admin.py  forms.py  models.py  urls.py  views.py
python_web/modul_10_web/second/notes/users/migrations/: 0001_initial.py
(+270 files in other folders)
