[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["vadim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
package-name = "^0.1"
django = "^5.0.4"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
